# New-Chess-Engine

./: .gitignore  CMakeLists.txt  Makefile  bb_utils.c  bb_utils.h  bishopDestReal.txt  bishopIntersections.txt  bitboard_ops.cpp  board_utils.c  board_utils.cpp  board_utils.h  control.c  control.cpp  control.h  debug_tools.cpp  game.cpp  game.h  generate_moves.c  generate_moves.cpp  generate_moves.h  global.h  ib.txt  load_precompute.c  load_precompute.cpp  load_precompute.h  lookup.h  magic_numbers.cpp  main.c  main.cpp  move.cpp  move.h  perft.c  perft.cpp  perft.h  planning.txt  player_input.c  player_input.cpp  player_input.h  precompute.c  precompute.cpp  (+10 more)
include/: engine.h  game.h  interface.h  magic_numbers.h  move_generation_test.h  transposition_table.h
precomputed-data/: perftsuite.txt
src/: bitboard_ops.cpp  debug_tools.cpp  engine.cpp  execute_move.cpp  game.cpp  generate_moves.cpp  interface.cpp  load_precompute.cpp  lookup.h  magic_numbers.cpp  main.cpp  move.cpp  move_generation_test.cpp  precompute.cpp  transposition_table.cpp
